--- a/module/Admin/view/admin/admin/add-offer.phtml
+++ b/module/Admin/view/admin/admin/add-offer.phtml
@@ -31,51 +31,65 @@
         </div>
         <div class="form-group">
              <label for="offerCountry" class="col-lg-2 control-label"><?php echo $this->translate('Kraj') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerCountry')); ?>
              </div>
         </div>
-        <div class="form-group">
-             <label for="offerType" class="col-lg-2 control-label"><?php echo $this->translate('Nazwa stanowiska') ?></label>
-             <div class="col-lg-10">
+         <div class="form-group">
+             <label for="offerType" class="col-lg-2 control-label"><?php echo $this->translate('Slogan') ?></label>
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerType')); ?>
              </div>
         </div>
-       
+              
         <div class="form-group">
              <label for="offerCity" class="col-lg-2 control-label"><?php echo $this->translate('Adres') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerCity')); ?>
              </div>
         </div>
         <div class="form-group">
              <label for="offerStreet" class="col-lg-2 control-label"><?php echo $this->translate('Ulica i numer bud./miesz.') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerStreet')); ?>
              </div>
         </div>       
         <div class="form-group">
              <label for="offerCategory" class="col-lg-2 control-label"><?php echo $this->translate('Kategoria') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerCategory')); ?>
              </div>
         </div>
         <div class="form-group">
              <label for="offerWebPage" class="col-lg-2 control-label"><?php echo $this->translate('Strona www') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerWebPage')); ?>
              </div>
         </div>
         <div class="form-group">
              <label for="offerEmail" class="col-lg-2 control-label"><?php echo $this->translate('Email') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerEmail')); ?>
              </div>
         </div>
         <div class="form-group">
              <label for="offerPhone" class="col-lg-2 control-label"><?php echo $this->translate('Telefon') ?></label>
-             <div class="col-lg-10">
+             <div class="col-lg-5">
                 <?php echo $this->formRow($form->get('offerPhone')); ?>
+             </div>
+        </div>
+        <div class="form-group">
+             <label for="offerVisible" class="col-lg-2 control-label"><?php echo $this->translate('Widoczność') ?></label>
+             <div class="col-lg-5">
+                 <?php echo $this->formRow($form->get('offerVisible')); ?>     
+             
+             </div>
+        </div>
+        <div class="form-group">
+             <label for="offerVideo" class="col-lg-2 control-label"><?php echo $this->translate('Link do wideo') ?></label>
+             <div class="col-lg-5">
+                 <?php echo $this->formRow($form->get('offerVideo')); ?>     
+             
              </div>
         </div>
 <!--        <div class="form-group">
