--- a/module/Admin/view/admin/admin/view.phtml
+++ b/module/Admin/view/admin/admin/view.phtml
@@ -26,7 +26,7 @@
                     <li class="active"><a href="#default" data-toggle="tab"><?php echo $this->translate('Ogólne') ?></a></li>
                     <li class=""><a href="#plane" data-toggle="tab"><?php echo $this->translate('Podłoże') ?></a></li>                  
                     <li class=""><a href="#lights" data-toggle="tab"><?php echo $this->translate('Światła') ?></a></li>    
-                    <li class=""><a href="#cameras" data-toggle="tab"><?php echo $this->translate('Kamery') ?></a></li>    
+                    <!--<li class=""><a href="#cameras" data-toggle="tab"><?php echo $this->translate('Kamery') ?></a></li>-->    
                 </ul>
                 
                 <div id="TabContent" class="tab-content">              
@@ -187,7 +187,7 @@
                             <?php echo $this->formSubmit($form->get('submit')); ?>
                          </div>
                          <div class="col-lg-1">
-                            <a href="#" class="btn btn-default ajaxShowVisualization" data-loading-text="<i class='fa fa-spinner fa-spin'></i>&ensp;ładowanie..."><i class="fa fa-picture-o"></i>&ensp; <?php echo $this->translate('Podgląd') ?></a>
+                            <!--<a href="#" class="btn btn-default ajaxShowVisualization" data-loading-text="<i class='fa fa-spinner fa-spin'></i>&ensp;ładowanie..."><i class="fa fa-picture-o"></i>&ensp; <?php echo $this->translate('Podgląd') ?></a>-->
                          </div>
                          <div class="col-lg-2">
                             <!--<a href="#" class="btn btn-default resetView" data-loading-text="<i class='fa fa-spinner fa-spin'></i>&ensp;ładowanie..." rel="tooltip" title="<?php echo $this->translate('Ustawienia domyślne') ?>"><i class="fa fa-exchange"></i></a>-->
