--- a/module/Admin/view/admin/admin/message-offer.phtml
+++ b/module/Admin/view/admin/admin/message-offer.phtml
@@ -10,8 +10,8 @@
     </a>
     <a href="<?php echo $this->url('admin', array('action' => 'message-offer', 'id' => $this->companyID )) ?>" class="btn btn-default btn-lg">
         <i class="fa fa-envelope"></i>&ensp;<?php echo $this->translate('Wiadomości') ?>
-    </a> - <?php echo $this->translate('otrzymane przez') ?>: <span class="companyTitle"><?php echo $this->company; ?></span></h1>
-
+    </a> - <?php echo $this->translate('otrzymane przez') ?>: <span class="companyTitle"><?php echo $this->company; ?></span>
+</h1>
 <hr/>
 <?php 
     //messages, alerts
@@ -100,7 +100,7 @@
     </table>
 
     <div class="form-group">
-        <a href="<?php echo $this->url('admin',array('action'=>'contact')) ?>" class="btn btn-default"><i class="glyphicon glyphicon-chevron-left"></i>&ensp;<?php echo $this->translate('Powrót') ?> </a>    
+        <a href="<?php echo $this->url('admin',array('action'=>'contact')) ?>" class="btn btn-default"><i class="fa fa-angle-left"></i>&ensp;<?php echo $this->translate('Powrót') ?> </a>    
     </div>
 
 <?php endif; ?>
